objects/VoC_Score__c.object
<CustomObject>
    <fields>
        <fullName>Area_Score_Trend__c</fullName>
        <formula>IF(
ISPICKVAL(Area__c,&apos;Technology Roadmap&apos;),
IF(
Score__c &gt;= Technology_Roadmap_Avg__c, 
Image(&quot;/resource/VoC_Up_Arrow&quot;,&quot;&quot;,30,60),Image(&quot;/resource/VoC_Down_Arrow&quot;,&quot;&quot;,30,60)
),
IF(
ISPICKVAL(Area__c,&apos;Fab Operations&apos;),
IF(
Score__c &gt;= Fab_Operations_Avg__c, 
Image(&quot;/resource/VoC_Up_Arrow&quot;,&quot;&quot;,30,60),
Image(&quot;/resource/VoC_Down_Arrow&quot;,&quot;&quot;,30,60)
),
IF(
ISPICKVAL(Area__c,&apos;Assurance of Supply&apos;),
IF(
Score__c &gt;= Assurance_of_Supply_Avg__c, 
Image(&quot;/resource/VoC_Up_Arrow&quot;,&quot;&quot;,30,60),
Image(&quot;/resource/VoC_Down_Arrow&quot;,&quot;&quot;,30,60)
),
IF(
ISPICKVAL(Area__c,&apos;Assurance of Supply&apos;),
IF(
Score__c &gt;= Assurance_of_Supply_Avg__c, 
Image(&quot;/resource/VoC_Up_Arrow&quot;,&quot;&quot;,30,60),
Image(&quot;/resource/VoC_Down_Arrow&quot;,&quot;&quot;,30,60)
),
IF(
ISPICKVAL(Area__c,&apos;Design Enablement&apos;),
IF(
Score__c &gt;= Design_Enablement_Avg__c, 
Image(&quot;/resource/VoC_Up_Arrow&quot;,&quot;&quot;,30,60),
Image(&quot;/resource/VoC_Down_Arrow&quot;,&quot;&quot;,30,60)
),
IF(
ISPICKVAL(Area__c,&apos;Capacity&apos;),
IF(
Score__c &gt;= Capacity_Avg__c, 
Image(&quot;/resource/VoC_Up_Arrow&quot;,&quot;&quot;,30,60),							Image(&quot;/resource/VoC_Down_Arrow&quot;,&quot;&quot;,30,60)
),
IF(
ISPICKVAL(Area__c,&apos;Attentiveness&apos;),
IF(
Score__c &gt;= Attentiveness_Avg__c, 								Image(&quot;/resource/VoC_Up_Arrow&quot;,&quot;&quot;,30,60),								Image(&quot;/resource/VoC_Down_Arrow&quot;,&quot;&quot;,30,60)),
IF(
ISPICKVAL(Area__c,&apos;Price&apos;),
IF(
Score__c &gt;= Price_Avg__c, 									Image(&quot;/resource/VoC_Up_Arrow&quot;,&quot;&quot;,30,60),									Image(&quot;/resource/VoC_Down_Arrow&quot;,&quot;&quot;,30,60)),
IF(
ISPICKVAL(Area__c,&apos;Ease of Doing Business&apos;),
IF(Score__c &gt;=Ease_of_Doing_Business_Avg__c, 										Image(&quot;/resource/VoC_Up_Arrow&quot;,&quot;&quot;,30,60),										Image(&quot;/resource/VoC_Down_Arrow&quot;,&quot;&quot;,30,60)),&apos;&apos;)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Score Trend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Technology Roadmap</fullName>
                </value>
                <value>
                    <fullName>Fab Operations</fullName>
                </value>
                <value>
                    <fullName>Assurance of Supply</fullName>
                </value>
                <value>
                    <fullName>Design Enablement</fullName>
                </value>
                <value>
                    <fullName>Capacity</fullName>
                </value>
                <value>
                    <fullName>Attentiveness</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Ease of Doing Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assurance_of_Supply_Avg__c</fullName>
        <formula>VoC__r.Contact__r.Assurance_of_Supply_Avg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assurance of Supply Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attentiveness_Avg__c</fullName>
        <formula>VoC__r.Contact__r.Attentiveness_Avg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attentiveness Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity_Avg__c</fullName>
        <formula>VoC__r.Contact__r.Capacity_Avg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <formula>VoC__r.Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Enablement_Avg__c</fullName>
        <formula>VoC__r.Contact__r.Design_Enablement_Avg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Design Enablement Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ease_of_Doing_Business_Avg__c</fullName>
        <formula>VoC__r.Contact__r.Ease_of_Doing_Business_Avg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ease of Doing Business Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fab_Operations_Avg__c</fullName>
        <formula>VoC__r.Contact__r.Fab_Operations_Avg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fab Operations Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade_5_best__c</fullName>
        <label>Grade (5 best)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Avg__c</fullName>
        <formula>VoC__r.Contact__r.Price_Avg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <formula>If(MONTH(DATEVALUE(CreatedDate))&gt;=1 &amp;&amp; MONTH(DATEVALUE(CreatedDate)) &lt;=3,&apos;Q1-&apos; + TEXT(YEAR(DATEVALUE(CreatedDate))), If(MONTH(DATEVALUE(CreatedDate))&gt;3 &amp;&amp; MONTH(DATEVALUE(CreatedDate)) &lt;=6,&apos;Q2-&apos; + TEXT(YEAR(DATEVALUE(CreatedDate))),
IF(MONTH(DATEVALUE(CreatedDate))&gt;6 &amp;&amp; MONTH(DATEVALUE(CreatedDate)) &lt;=9,&apos;Q3-&apos; + TEXT(YEAR(DATEVALUE(CreatedDate))),
&apos;Q4-&apos; + TEXT(YEAR(DATEVALUE(CreatedDate))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technology_Roadmap_Avg__c</fullName>
        <formula>VoC__r.Contact__r.Technology_Roadmap_Avg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technology Roadmap Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VoC__c</fullName>
        <label>VoC</label>
        <referenceTo>VoC__c</referenceTo>
        <relationshipName>Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>VoC Score</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VoC Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>